batches are working now

--- a/tv-script-generation/dlnd_tv_script_generation.ipynb
+++ b/tv-script-generation/dlnd_tv_script_generation.ipynb
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 145,
    "metadata": {
     "scrolled": false
    },
@@ -648,25 +648,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1  2  3  4  5  6]\n",
-      " [ 7  8  9 10 11 12]\n",
-      " [13 14 15 16 17 18]]\n",
-      "[[ 2  3  4  5  6  7]\n",
-      " [ 8  9 10 11 12 13]\n",
-      " [14 15 16 17 18  1]]\n",
-      "[array([], shape=(0, 6), dtype=int64) array([], shape=(0, 6), dtype=int64)\n",
-      " array([], shape=(0, 6), dtype=int64)]\n"
+      "Tests Passed\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "\"\\nDON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\\n\""
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -689,44 +672,33 @@
     "    # Drop incomplete batches\n",
     "    int_text = np.array(int_text[:words_per_batch * num_batches])\n",
     "    \n",
-    "    rvalue = np.empty((num_batches,), dtype=object)\n",
-    "    batch_number = 0\n",
-    "    \n",
     "    # Create targets as a 1-word shifted version of int_text\n",
     "    target_text = np.append(int_text[1:], np.array([int_text[0]]))\n",
     "    \n",
+    "    # Reshape in rows that will split into batches\n",
     "    int_text = int_text.reshape((batch_size, -1))\n",
-    "    print(int_text)\n",
-    "    \n",
     "    target_text = target_text.reshape((batch_size, -1))\n",
     "    \n",
-    "    for n in range(0, num_batches):\n",
-    "        rvalue[n] = np.empty((batch_size, seq_length), dtype=object)\n",
-    "        \n",
-    "        for m in range(0, batch_size):\n",
-    "            # Slice the features into `batch_size` rows and `seq_length` columns\n",
-    "            #x = int_text[n * words_per_batch + m * seq_length:n * words_per_batch + m * seq_length + seq_length]\n",
-    "        \n",
-    "            # Arrange targets (shifted by one)\n",
-    "            #y = np.zeros(x.shape)\n",
-    "            #y = int_text[]\n",
-    "            #y[:, :-1], y[:, -1] = x[:, 1:], x[:, 0]\n",
-    "        \n",
-    "            #rvalue[batch_number] = np.append(rvalue[batch_number], np.array([x,y]))\n",
-    "            rvalue[n] = int_text[n * words_per_batch + m * seq_length:n * words_per_batch + m * seq_length + seq_length]\n",
-    "            pass\n",
-    "            \n",
-    "        batch_number = batch_number + 1\n",
-    "        #rvalue.append(x,y\n",
+    "    input_batches = np.empty((num_batches, batch_size), dtype=object)\n",
+    "    target_batches = np.empty((num_batches, batch_size), dtype=object)\n",
     "    \n",
+    "    # Create numpy array placeholders for everything\n",
+    "    rvalue = np.empty((num_batches, 2, batch_size, seq_length), dtype=object)\n",
+    "        \n",
+    "    for set_idx in range(0, len(int_text)):\n",
+    "        input_sets = int_text[set_idx].reshape((-1, seq_length))\n",
+    "        target_sets = target_text[set_idx].reshape((-1, seq_length))\n",
+    "        \n",
+    "        for b in range(0, len(input_sets)):\n",
+    "            rvalue[b][0][set_idx] = input_sets[b]\n",
+    "            rvalue[b][1][set_idx] = target_sets[b]\n",
+    "        \n",
     "    return rvalue\n",
-    "\n",
-    "print (get_batches([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20], 3, 2))\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
     "\"\"\"\n",
-    "#tests.test_get_batches(get_batches)"
+    "tests.test_get_batches(get_batches)"
    ]
   },
   {
