--- a/language-translation/dlnd_language_translation.ipynb
+++ b/language-translation/dlnd_language_translation.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,11 +40,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset Stats\n",
+      "Roughly the number of unique words: 227\n",
+      "Number of sentences: 137861\n",
+      "Average number of words in a sentence: 13.225277634719028\n",
+      "\n",
+      "English sentences 0 to 40:\n",
+      "new jersey is sometimes quiet during autumn , and it is snowy in april .\n",
+      "the united states is usually chilly during july , and it is usually freezing in november .\n",
+      "california is usually quiet during march , and it is usually hot in june .\n",
+      "the united states is sometimes mild during june , and it is cold in september .\n",
+      "your least liked fruit is the grape , but my least liked is the apple .\n",
+      "his favorite fruit is the orange , but my favorite is the grape .\n",
+      "paris is relaxing during december , but it is usually chilly in july .\n",
+      "new jersey is busy during spring , and it is never hot in march .\n",
+      "our least liked fruit is the lemon , but my least liked is the grape .\n",
+      "the united states is sometimes busy during january , and it is sometimes warm in november .\n",
+      "the lime is her least liked fruit , but the banana is my least liked .\n",
+      "he saw a old yellow truck .\n",
+      "india is rainy during june , and it is sometimes warm in november .\n",
+      "that cat was my most loved animal .\n",
+      "he dislikes grapefruit , limes , and lemons .\n",
+      "her least liked fruit is the lemon , but his least liked is the grapefruit .\n",
+      "california is never cold during february , but it is sometimes freezing in june .\n",
+      "china is usually pleasant during autumn , and it is usually quiet in october .\n",
+      "paris is never freezing during november , but it is wonderful in october .\n",
+      "the united states is never rainy during january , but it is sometimes mild in october .\n",
+      "china is usually pleasant during november , and it is never quiet in october .\n",
+      "the united states is never nice during february , but it is sometimes pleasant in april .\n",
+      "india is never busy during autumn , and it is mild in spring .\n",
+      "paris is mild during summer , but it is usually busy in april .\n",
+      "france is never cold during september , and it is snowy in october .\n",
+      "california is never cold during may , and it is sometimes chilly in march .\n",
+      "he dislikes lemons , grapes , and mangoes.\n",
+      "their favorite fruit is the mango , but our favorite is the pear .\n",
+      "france is sometimes quiet during may , and it is never chilly in august .\n",
+      "paris is never pleasant during september , and it is beautiful in autumn .\n",
+      "he dislikes apples , peaches , and grapes .\n",
+      "california is usually freezing during december , and it is busy in april .\n",
+      "your most feared animal is that shark .\n",
+      "paris is usually wet during august , and it is never dry in november .\n",
+      "paris is usually beautiful during september , and it is usually snowy in november .\n",
+      "the united states is never wet during january , but it is usually hot in october .\n",
+      "we like oranges , mangoes , and grapes .\n",
+      "they like pears , apples , and mangoes .\n",
+      "she dislikes that little red truck .\n",
+      "the grapefruit is my most loved fruit , but the banana is her most loved .\n",
+      "\n",
+      "French sentences 0 to 40:\n",
+      "new jersey est parfois calme pendant l' automne , et il est neigeux en avril .\n",
+      "les états-unis est généralement froid en juillet , et il gèle habituellement en novembre .\n",
+      "california est généralement calme en mars , et il est généralement chaud en juin .\n",
+      "les états-unis est parfois légère en juin , et il fait froid en septembre .\n",
+      "votre moins aimé fruit est le raisin , mais mon moins aimé est la pomme .\n",
+      "son fruit préféré est l'orange , mais mon préféré est le raisin .\n",
+      "paris est relaxant en décembre , mais il est généralement froid en juillet .\n",
+      "new jersey est occupé au printemps , et il est jamais chaude en mars .\n",
+      "notre fruit est moins aimé le citron , mais mon moins aimé est le raisin .\n",
+      "les états-unis est parfois occupé en janvier , et il est parfois chaud en novembre .\n",
+      "la chaux est son moins aimé des fruits , mais la banane est mon moins aimé.\n",
+      "il a vu un vieux camion jaune .\n",
+      "inde est pluvieux en juin , et il est parfois chaud en novembre .\n",
+      "ce chat était mon animal le plus aimé .\n",
+      "il n'aime pamplemousse , citrons verts et les citrons .\n",
+      "son fruit est moins aimé le citron , mais son moins aimé est le pamplemousse .\n",
+      "californie ne fait jamais froid en février , mais il est parfois le gel en juin .\n",
+      "chine est généralement agréable en automne , et il est généralement calme en octobre .\n",
+      "paris est jamais le gel en novembre , mais il est merveilleux en octobre .\n",
+      "les états-unis est jamais pluvieux en janvier , mais il est parfois doux en octobre .\n",
+      "chine est généralement agréable en novembre , et il est jamais tranquille en octobre .\n",
+      "les états-unis est jamais agréable en février , mais il est parfois agréable en avril .\n",
+      "l' inde est jamais occupé à l'automne , et il est doux au printemps .\n",
+      "paris est doux pendant l' été , mais il est généralement occupé en avril .\n",
+      "france ne fait jamais froid en septembre , et il est neigeux en octobre .\n",
+      "californie ne fait jamais froid au mois de mai , et il est parfois frisquet en mars .\n",
+      "il déteste les citrons , les raisins et les mangues .\n",
+      "leur fruit préféré est la mangue , mais notre préféré est la poire .\n",
+      "la france est parfois calme au mois de mai , et il est jamais froid en août .\n",
+      "paris est jamais agréable en septembre , et il est beau à l' automne .\n",
+      "il déteste les pommes , les pêches et les raisins .\n",
+      "la californie est le gel habituellement en décembre , et il est occupé en avril .\n",
+      "votre animal le plus redouté est que le requin .\n",
+      "paris est généralement humide au mois d' août , et il est jamais sec en novembre .\n",
+      "paris est généralement beau en septembre , et il est généralement enneigée en novembre .\n",
+      "les états-unis est jamais humide en janvier , mais il est généralement chaud en octobre .\n",
+      "nous aimons les oranges , les mangues et les raisins .\n",
+      "ils aiment les poires , les pommes et les mangues .\n",
+      "elle déteste ce petit camion rouge .\n",
+      "le pamplemousse est mon fruit le plus cher , mais la banane est la plus aimée .\n"
+     ]
+    }
+   ],
    "source": [
-    "view_sentence_range = (0, 10)\n",
+    "view_sentence_range = (0, 40)\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -84,9 +179,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def text_to_ids(source_text, target_text, source_vocab_to_int, target_vocab_to_int):\n",
     "    \"\"\"\n",
@@ -99,7 +202,14 @@
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
     "    \n",
-    "    return None, None\n",
+    "    # Convert each word in each sentence list to its corresponding source vocab ID\n",
+    "    source_id_text = [[source_vocab_to_int[word] for word in n.split()]\n",
+    "                      for n in source_text.split(\"\\n\")]\n",
+    "    \n",
+    "    # Same for target.  Also add <EOS> ID to the end of each sentence\n",
+    "    target_id_text = [[target_vocab_to_int[word] for word in n.split()]+[target_vocab_to_int['<EOS>']]\n",
+    "                      for n in target_text.split(\"\\n\")]\n",
+    "    return source_id_text, target_id_text\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -117,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,9 +271,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TensorFlow Version: 1.1.0\n",
+      "Default GPU Device: /gpu:0\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -214,9 +333,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def model_inputs():\n",
     "    \"\"\"\n",
@@ -225,8 +352,17 @@
     "    max target sequence length, source sequence length)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None, None, None, None, None, None\n",
-    "\n",
+    "    \n",
+    "    input_data = tf.placeholder(tf.int32, (None, None), name='input')\n",
+    "    targets = tf.placeholder(tf.int32, (None, None), name='targets')\n",
+    "    learning_rate = tf.placeholder(tf.float32, name='learning_rate')\n",
+    "    keep_probability = tf.placeholder(tf.float32, name='keep_prob')\n",
+    "    target_sequence_length = tf.placeholder(tf.int32, (None,), name='target_sequence_length')\n",
+    "    max_target_sequence_length = tf.reduce_max(target_sequence_length, name='max_target_len')\n",
+    "    source_sequence_length = tf.placeholder(tf.int32, (None,), name='source_sequence_length')\n",
+    "    \n",
+    "    return (input_data, targets, learning_rate, keep_probability, target_sequence_length,\n",
+    "            max_target_sequence_length, source_sequence_length)\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -244,9 +380,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def process_decoder_input(target_data, target_vocab_to_int, batch_size):\n",
     "    \"\"\"\n",
@@ -257,7 +401,13 @@
     "    :return: Preprocessed target data\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    \n",
+    "    # See sequence_to_sequence implementation\n",
+    "    # Remove the last word id from each batch and concat the <GO> to the begining of each batch\n",
+    "    ending = tf.strided_slice(target_data, [0, 0], [batch_size, -1], [1, 1])\n",
+    "    decoder_input = tf.concat([tf.fill([batch_size, 1], target_vocab_to_int['<GO>']), ending], 1)\n",
+    "\n",
+    "    return decoder_input\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -278,11 +428,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "from imp import reload\n",
     "reload(tests)\n",
@@ -302,7 +460,27 @@
     "    :return: tuple (RNN output, RNN state)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    \n",
+    "    # See sequence_to_sequence implementation\n",
+    "    # See amma_karnna implementation\n",
+    "    \n",
+    "    # Encoder embedding\n",
+    "    encoder_embed_input = tf.contrib.layers.embed_sequence(rnn_inputs, source_vocab_size, encoding_embedding_size)\n",
+    "    \n",
+    "    # RNN cell\n",
+    "    def build_cell(rnn_size, keep_prob):\n",
+    "        lstm = tf.contrib.rnn.LSTMCell(rnn_size,\n",
+    "                                              initializer=tf.random_uniform_initializer(-0.1, -0.1, seed=2))\n",
+    "        encoder = tf.contrib.rnn.DropoutWrapper(lstm, output_keep_prob=keep_prob)\n",
+    "        \n",
+    "        return encoder\n",
+    "    \n",
+    "    encoder_cell = tf.contrib.rnn.MultiRNNCell([build_cell(rnn_size, keep_prob) for _ in range(num_layers)])\n",
+    "    \n",
+    "    encoder_output, encoder_state = tf.nn.dynamic_rnn(encoder_cell, encoder_embed_input,\n",
+    "                                                      sequence_length=source_sequence_length, dtype=tf.float32)\n",
+    "    \n",
+    "    return encoder_output, encoder_state\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -527,9 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
@@ -625,9 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -920,7 +1094,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
